# discord-ext-native-voice

./: .gitignore  .travis.yml  Cargo.toml  README.md  appveyor.yml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: wheel-builder.yml
discord/ext/native_voice/: __init__.py
scripts/: before_install.sh  deploy_windows.ps1
src/: error.rs  lib.rs  payloads.rs  player.rs  protocol.rs  state.rs
