[package]
name = "discord-ext-native-voice"
version = "0.1.0"
license = "MIT OR Apache-2.0"
description = "A native voice implementation of voice send"
authors = ["Rapptz <rapptz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pyo3 = { version = "0.11.1", features = ["extension-module"] }
native-tls = { version = "0.2.3"}
tungstenite = { version = "0.11.1", features = ["tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value"] }
serde_repr = { version = "0.1.6" }
parking_lot = { version = "0.11" }
crossbeam-channel = { version = "0.4" }
xsalsa20poly1305 = { version = "0.4", features = ["heapless"] }
rand = { version = "0.7" }
audiopus = { version = "0.2" }

[lib]
name = "_native_voice"
crate-type = ["cdylib"]
