[metadata]
name = discord-ext-native-voice
license = MIT or Apache-2
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: OSI Approved :: Apache 2.0
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Rust
    Operating System :: POSIX
    Operating System :: Windows
    Operating System :: MacOS

[options]
packages = discord.ext.native_voice
zip_safe = False
setup_requires = setuptools-rust>=0.11.5,<0.12; wheel
